--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <a href="#partners" class="text-gray-300 hover:text-white transition-colors">Partners</a>
                     <a href="#!" id="about-creator-btn" class="text-gray-300 hover:text-white transition-colors">About</a>
                 </div>
-                <a href="https://github.com/Cleo876/ForgeStudio-" target="_blank" rel="noopener noreferrer" class="btn btn-outline px-4 py-2 text-sm">
+                <a href="https://github.com/Cleo876/-" target="_blank" rel="noopener noreferrer" class="btn btn-outline px-4 py-2 text-sm">
                     <i class="fab fa-github mr-2"></i> GitHub
                 </a>
             </nav>
