--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <a href="#partners" class="text-gray-300 hover:text-white transition-colors">Partners</a>
                     <a href="#!" id="about-creator-btn" class="text-gray-300 hover:text-white transition-colors">About</a>
                 </div>
-                <a href="https://github.com/Cleo876/-" target="_blank" rel="noopener noreferrer" class="btn btn-outline px-4 py-2 text-sm">
+                <a href="https://github.com/Cleo876/ForgeStudio-" target="_blank" rel="noopener noreferrer" class="btn btn-outline px-4 py-2 text-sm">
                     <i class="fab fa-github mr-2"></i> GitHub
                 </a>
             </nav>
@@ -579,8 +579,26 @@
                         </ul>
                     </div>
                 </div>
+            </div> <!-- End 2-column grid -->
+
+            <!-- NEW: Why "Forge"? Section -->
+            <div class="mt-16">
+                <div class="text-center mb-8">
+                     <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">Why "Forge"?</h2>
+                </div>
+                <div class="card p-8 max-w-3xl mx-auto border-gray-700">
+                    <div class="space-y-4 text-gray-300 text-lg text-center">
+                        <p>
+                            "Forge" signifies our core identity: <strong class="text-white">crafting robust, powerful, and enduring software</strong>, much like a blacksmith methodically shapes raw material into a permanent, high-value tool.
+                        </p>
+                        <p>
+                            This name also extends that power to you, the user. We provide you with your own "forge" to <strong class="text-white">shape and build your ideas</strong> with a guarantee of lasting ownership, free from external control.
+                        </s:p>
+                    </div>
+                </div>
             </div>
-        </div>
+
+        </div> <!-- End page-modal-content -->
     </div>
 
     <!-- 
