--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Forge Suite - Open Source Tools You Own</title>
     
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    
     <!-- Fonts and Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- 
-        Include the favicon of the website, using the logo image as the favicon
+        Include the favicon of the website, using the logo image as the favi
     -->
     <link rel="icon" href="https://github.com/Cleo876/Forge-Suite/blob/main/%5BMOD%5D%20Forge%20Suite%20Logo%20Icon.png?raw=true" type="image/png">
 
@@ -347,7 +349,31 @@
                         <p class="text-gray-400 mb-6 flex-grow">
                             Create and manage professional invoices with ease. Features a built-in client dashboard, PDF export, and multi-currency support.
                         </p>
-                        <a href="https://github.com/Cleo876/Invoice-Forge-" target="_blank" rel="noopener noreferrer" class="btn btn-outline mt-auto w-full">
+                        <a href="https://github.com/Cleo876/InvoiceForge" target="_blank" rel="noopener noreferrer" class="btn btn-outline mt-auto w-full">
+                            Download
+                        </a>
+                    </div>
+
+                    <!-- NEW: Project Card 5: CaptureForge -->
+                    <div class="card p-6 flex flex-col">
+                        <h3 class="text-2xl font-bold text-white mb-3">{CaptureForge}</h3>
+                        <p class="text-gray-400 mb-6 flex-grow">
+                            A privacy-first, 4K-ready screen recording studio in a single file. Capture video, mix raw audio, and highlight your mouse—all without installation.
+                        </p>
+                        <!-- CHANGED: Now links to GitHub Repo like the others -->
+                        <a href="https://github.com/Cleo876/Capture-Forge" target="_blank" rel="noopener noreferrer" class="btn btn-outline mt-auto w-full">
+                            Download
+                        </a>
+                    </div>
+
+                    <!-- NEW: Project Card 6: QR Forge -->
+                    <div class="card p-6 flex flex-col">
+                        <h3 class="text-2xl font-bold text-white mb-3">{QR Forge}</h3>
+                        <p class="text-gray-400 mb-6 flex-grow">
+                            Generate high-resolution, tracker-free QR codes instantly. Customize colors and styles entirely in your browser, bypassing commercial paywalls.
+                        </p>
+                        <!-- Linking to Repo as requested alternative -->
+                        <a href="https://github.com/Cleo876/QR-Forge" target="_blank" rel="noopener noreferrer" class="btn btn-outline mt-auto w-full">
                             Download
                         </a>
                     </div>
